# dxtc-compression-tests

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.MD  bmp.cpp  bmp.h  dd.cpp  dd.h  ddsamp.cpp  s3tc.h  stdafx.h  test.h  test1.cpp  test2.cpp  test3.cpp
